--- a/config-files_tetralith/config_tetralith_init_matrix.cfg
+++ b/config-files_tetralith/config_tetralith_init_matrix.cfg
@@ -95,7 +95,7 @@
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
     timeframe_refgeo_init_GRL_config             = 1E9
-    timeframe_refgeo_init_ANT_config             = 1E9
+    timeframe_refgeo_init_ANT_config             = 40000.0
 
     ! == Present-day geometry
     ! =======================
@@ -116,7 +116,7 @@
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
     timeframe_refgeo_PD_GRL_config               = 1E9
-    timeframe_refgeo_PD_ANT_config               = 1E9
+    timeframe_refgeo_PD_ANT_config               = 40000.0
 
     ! == GIA equilibrium geometry
     ! ===========================
@@ -137,7 +137,7 @@
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
     timeframe_refgeo_GIAeq_GRL_config            = 1E9
-    timeframe_refgeo_GIAeq_ANT_config            = 1E9
+    timeframe_refgeo_GIAeq_ANT_config            = 40000.0
 
     ! == Parameters for idealised geometries
     ! ======================================
@@ -175,12 +175,12 @@
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
-    maximum_resolution_grounded_ice_config       = 50e3                             ! [m]          Maximum resolution for grounded ice
-    maximum_resolution_floating_ice_config       = 30e3                             ! [m]          Maximum resolution for floating ice
-    maximum_resolution_grounding_line_config     = 20e3                             ! [m]          Maximum resolution for the grounding line
-    maximum_resolution_calving_front_config      = 30e3                             ! [m]          Maximum resolution for the calving front
-    maximum_resolution_ice_front_config          = 50e3                             ! [m]          Maximum resolution for the ice front
-    maximum_resolution_coastline_config          = 50e3                             ! [m]          Maximum resolution for the coastline
+    maximum_resolution_grounded_ice_config       = 80e3                             ! [m]          Maximum resolution for grounded ice
+    maximum_resolution_floating_ice_config       = 50e3                             ! [m]          Maximum resolution for floating ice
+    maximum_resolution_grounding_line_config     = 40e3                             ! [m]          Maximum resolution for the grounding line
+    maximum_resolution_calving_front_config      = 50e3                             ! [m]          Maximum resolution for the calving front
+    maximum_resolution_ice_front_config          = 80e3                             ! [m]          Maximum resolution for the ice front
+    maximum_resolution_coastline_config          = 80e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
     grounding_line_width_config                  = 12e3                             ! [m]          Width of the band around the grounding line that should get this resolution
