--- a/config-files_tetralith/config_tetralith_init_matrix.cfg
+++ b/config-files_tetralith/config_tetralith_init_matrix.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .TRUE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = 'results_ant_matrix'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_matrix_init'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -384,12 +384,12 @@
   ! =========================
 
     choice_calving_law_config                    = 'threshold_thickness'            ! Choice of calving law: "none", "threshold_thickness"
-    calving_threshold_thickness_shelf_config     = 100.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
+    calving_threshold_thickness_shelf_config     = 1.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
     do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
     remove_shelves_larger_than_PD_config         = .FALSE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
-    continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
+    continental_shelf_calving_config             = .TRUE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
 
   ! == Ice dynamics - stabilisation
@@ -740,7 +740,7 @@
     choice_BMB_model_NAM_config                  = 'uniform'
     choice_BMB_model_EAS_config                  = 'uniform'
     choice_BMB_model_GRL_config                  = 'uniform'
-    choice_BMB_model_ANT_config                  = 'parameterised'
+    choice_BMB_model_ANT_config                  = 'uniform'
 
     ! Prescribed BMB forcing
     choice_BMB_prescribed_NAM_config             = ''
