--- a/config-files_tetralith/config_tetralith_PMIP.cfg
+++ b/config-files_tetralith/config_tetralith_PMIP.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = 'results_ant_PMIP_AWIESM1'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = 'results_ant_PMIP_AWIESM1_LR'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -16,8 +16,8 @@
   ! == Time of simulation
   ! =====================
 
-    start_time_of_run_config                     = -20000.0                              ! [yr] Start time of the simulation
-    end_time_of_run_config                       = 0.0                          ! [yr] End   time of the simulation
+    start_time_of_run_config                     = -25000.0                              ! [yr] Start time of the simulation
+    end_time_of_run_config                       = -22000.0                          ! [yr] End   time of the simulation
 
   ! == Which model regions to simulate
   ! ==================================
@@ -189,8 +189,8 @@
     coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
-    ROI_maximum_resolution_uniform_config        = 200e3                            ! [m]          Maximum resolution for the entire domain
+    choice_regions_of_interest_config            = 'Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    ROI_maximum_resolution_uniform_config        = 100e3                            ! [m]          Maximum resolution for the entire domain
     ROI_maximum_resolution_grounded_ice_config   = 05e3                             ! [m]          Maximum resolution for grounded ice
     ROI_maximum_resolution_floating_ice_config   = 02e3                             ! [m]          Maximum resolution for floating ice
     ROI_maximum_resolution_grounding_line_config = 02e3                             ! [m]          Maximum resolution for the grounding line
@@ -350,8 +350,8 @@
 
     ! Time stepping
     choice_timestepping_config                   = 'pc'                             ! Choice of timestepping method: "direct", "pc" (NOTE: 'direct' does not work with DIVA ice dynamics!)
-    dt_ice_max_config                            = 2.0                              ! [yr] Maximum time step of the ice dynamics model
-    dt_ice_min_config                            = 0.01                             ! [yr] Minimum time step of the ice dynamics model
+    dt_ice_max_config                            = 0.5                              ! [yr] Maximum time step of the ice dynamics model
+    dt_ice_min_config                            = 0.0025                             ! [yr] Minimum time step of the ice dynamics model
     dt_ice_startup_phase_config                  = 0.0                              ! [yr] Length of time window after start_time and before end_time when dt = dt_min, to ensure smooth restarts
     do_grounded_only_adv_dt_config               = .FALSE.                          ! If .TRUE., only grounded ice is used in the computation of the advective time step limit (CFL condition)
 
@@ -384,12 +384,12 @@
   ! =========================
 
     choice_calving_law_config                    = 'threshold_thickness'            ! Choice of calving law: "none", "threshold_thickness"
-    calving_threshold_thickness_shelf_config     = 100.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
+    calving_threshold_thickness_shelf_config     = 1.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
     do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
     remove_shelves_larger_than_PD_config         = .FALSE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
-    continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
+    continental_shelf_calving_config             = .TRUE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
 
   ! == Ice dynamics - stabilisation
@@ -572,8 +572,8 @@
     filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
 
-    do_lapse_rate_corrections_ANT_config         = .FALSE.                           ! Whether or not to apply a lapse rate correction
-    lapse_rate_temp_ANT_config                   = 0.0079                              ! [K km^-1] Lapse rate for Antarctica
+    do_lapse_rate_corrections_ANT_config         = .TRUE.                           ! Whether or not to apply a lapse rate correction
+    lapse_rate_temp_ANT_config                   = 0.008                              ! [K km^-1] Lapse rate for Antarctica
     !lapse_rate_precip_ANT_config                 = 0.07                              ! 
  
 
@@ -699,7 +699,7 @@
     choice_BMB_model_NAM_config                  = 'uniform'
     choice_BMB_model_EAS_config                  = 'uniform'
     choice_BMB_model_GRL_config                  = 'uniform'
-    choice_BMB_model_ANT_config                  = 'parameterised' ! it cant be parameterised and mesh update
+    choice_BMB_model_ANT_config                  = 'uniform' ! it cant be parameterised and mesh update
 
     ! Prescribed BMB forcing
     choice_BMB_prescribed_NAM_config             = ''
