--- a/config-files_tetralith/config_tetralith_PMIP.cfg
+++ b/config-files_tetralith/config_tetralith_PMIP.cfg
@@ -189,7 +189,7 @@
     coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = 'Antarctic_Peninsula'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
     ROI_maximum_resolution_uniform_config        = 100e3                            ! [m]          Maximum resolution for the entire domain
     ROI_maximum_resolution_grounded_ice_config   = 20e3                             ! [m]          Maximum resolution for grounded ice
     ROI_maximum_resolution_floating_ice_config   = 10e3                             ! [m]          Maximum resolution for floating ice
@@ -226,7 +226,7 @@
   ! ======================================
 
     choice_zeta_grid_config                      = 'regular'                        ! The type of vertical grid to use; can be "regular", "irregular_log", "old_15_layer_zeta"
-    nz_config                                    = 12                               ! The number of vertical layers to use
+    nz_config                                    = 15                               ! The number of vertical layers to use
     zeta_irregular_log_R_config                  = 10.0                             ! Ratio between surface and base layer spacings
 
   ! == Ice dynamics - velocity
@@ -267,7 +267,7 @@
     ! Some parameters for numerically solving the stress balance
     SIA_maximum_diffusivity_config               = 1E5                              ! Limit the diffusivity in the SIA to this value
     visc_it_norm_dUV_tol_config                  = 1E-3                             ! Stop criterion for the viscosity iteration: the L2-norm of successive velocity solutions should be smaller than this number
-    visc_it_nit_config                           = 500                              ! Maximum number of effective viscosity iterations
+    visc_it_nit_config                           = 1000                              ! Maximum number of effective viscosity iterations
     visc_it_relax_config                         = 0.2                              ! Relaxation parameter for subsequent viscosity iterations (for improved stability)
     visc_eff_min_config                          = 1E4                              ! Minimum value for effective viscosity
     vel_max_config                               = 4000.0                           ! Velocities are limited to this value
