--- a/config-files_tetralith/config_tetralith_PMIP_AWIESM1.cfg
+++ b/config-files_tetralith/config_tetralith_PMIP_AWIESM1.cfg
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_init_ANT_config              = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_PD_ANT_config                = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -171,7 +171,7 @@
     filename_initial_mesh_NAM_config             = ''
     filename_initial_mesh_EAS_config             = ''
     filename_initial_mesh_GRL_config             = ''
-    filename_initial_mesh_ANT_config             = '/home/x_frare/UFEMISM2.0/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
+    filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
