--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
@@ -205,7 +205,7 @@
     ROI_coastline_width_config                   = 05e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Mesh update settings
-    allow_mesh_updates_config                    = .FALSE.                          ! [-]          Whether or not mesh updates are allowed
+    allow_mesh_updates_config                    = .TRUE.                          ! [-]          Whether or not mesh updates are allowed
     dt_mesh_update_min_config                    = 1000.0                           ! [yr]         Minimum amount of time between mesh updates
     minimum_mesh_fitness_coefficient_config      = 0.95                             ! [-]          If the mesh fitness coefficient drops below this threshold, trigger a mesh update
     do_out_of_time_calving_front_relax_config    = .TRUE.                           !              Whether or not to step out of time and relax the calving front for a few iterations after a mesh update
