--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
@@ -636,7 +636,7 @@
     timeframe_SMB_prescribed_NAM_config          = 1E9
     timeframe_SMB_prescribed_EAS_config          = 1E9
     timeframe_SMB_prescribed_GRL_config          = 1E9
-    timeframe_SMB_prescribed_ANT_config          = 31000.0
+    timeframe_SMB_prescribed_ANT_config          = 1E9
     
    ! Restarting the IMAU-ITM SMB firn model
     choice_SMB_IMAUITM_init_firn_NAM_config      = 'uniform'                        ! 'uniform' or 'read_from_file' for restarts.
